Fixes in conversations list icons alignment + manages the icon ''View served requests map" on small screens

--- a/src/app/ws_requests/ws-requests-list/ws-requests-list.component.scss
+++ b/src/app/ws_requests/ws-requests-list/ws-requests-list.component.scss
@@ -538,7 +538,7 @@ span .switch-agent-admin-requests-btn {
   pointer-events: none;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 723px) {
   .bottom-bottom-nav {
     background-color: #fff;
     width: 100%;
@@ -579,7 +579,7 @@ span .switch-agent-admin-requests-btn {
 
 }
 
-@media (max-width: 650px) {
+@media (max-width: 724px) {
   .right-li {
     display: none !important;
   }
